# Practice

./: README.md
Boost_socket/: CMakeLists.txt  readme.txt
Boost_socket/src/: client.cpp  server.cpp
Cmake2_Dynamic_lib/: CMakeLists.txt
Cmake3_Subdirectory/: CMakeLists.txt
Cmake3_Subdirectory/hello/: CMakeLists.txt
Cmake3_Subdirectory/hello/src/: hello.cpp
DSA/linked_list/: CMakeLists.txt
DSA/linked_list/src/: linked_list.c
DSA/sorting/: main.cpp
Design_patterns/: CMakeLists.txt
Design_patterns/src/Adapter/: adapter.cpp
Design_patterns/src/Bridge/: bridge.cpp
Design_patterns/src/Builder/: builder.cpp
Design_patterns/src/Facade/: facade.cpp
Design_patterns/src/Factory_pattern/: factory.cpp
Design_patterns/src/Prototype/: prototype.cpp
Design_patterns/src/SOLID/: open_closed.cpp  single_rsp.cpp
Design_patterns/src/Singleton/: singleton.cpp
Dynamic_lib/: Makefile  main.c
Dynamic_library/: Makefile  main.cpp
IPC/message_queue/src/: msgreceiver.cpp  msgsender.cpp
IPC/shared_memory/: CMakeLists.txt
IPC/shared_memory/src/: sharedread.cpp  sharedwrite.cpp
IPC/signals/: CMakeLists.txt
IPC/signals/src/: sigreceive.cpp  sigself.cpp  sigsent.cpp
IPC/sockets/: CMakeLists.txt
IPC/sockets/src/: streamclient.cpp  streamserver.cpp
MQTT/Publish/: Makefile  publish.cpp
MQTT/Subscribe/: Makefile  subscribe.cpp
MQTT/publish/: Makefile  publish.c
MQTT/subscrib/: Makefile  subscribe.c
Practice/lib/: Makefile  lib.c
Practice/main/: Makefile  main.c
Static_library/lib/: Makefile  lib.cpp
Static_library/main/: Makefile  main.cpp
Threads/: CMakeLists.txt
Threads/inc/: thread_guard.hpp  thread_stack.hpp
Threads/src/: thread_accumulate.cpp  thread_args.cpp  thread_atomic.cpp  thread_cond_var.cpp  thread_creation.cpp  thread_future.cpp  thread_guard.cpp  thread_joinable.cpp  thread_jthreads.cpp  thread_move.cpp  thread_mutex.cpp  thread_package_task.cpp  thread_promise.cpp  thread_promise_exp.cpp  thread_stack.cpp  thread_yield.cpp
boost_timer/: CMakeLists.txt
boost_timer/src/: timer.cpp
ptr_container/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ptr_container.cpp
shared_ptr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  shared_ptr.cpp
smart_ptr/: CMakeLists.txt  Makefile  readme.txt  scopped_ptr.cpp  test
string/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  string.cpp
